@@ -8,6 +8,7 @@ export(cacheDirectory)
 export(cloneVersion)
 export(completeUpload)
 export(createProject)
+export(definePathQuery)
 export(defineTextQuery)
 export(fetchLatest)
 export(fetchManifest)
